Range based http loader for distributed inf and cli improvements